Questore/Questore/wwwroot/assets/styles/app.css
/* ... */
.mytopnav-item:nth-child(2) {
    background: var(--main-color-green);
}

.mytopnav-item:nth-child(3) {
    background: var(--main-color-blue);
}

.mytopnav-item:nth-child(4) {
    background: var(--main-color-purple);
}

.mytopnav-item:nth-child(5) {
    background: var(--main-color-red);
}

.mytopnav-item:nth-child(1).active {
    color: var(--main-color-yellow);
}

.mytopnav-item:nth-child(2).active {
    color: var(--main-color-green);
}

.mytopnav-item:nth-child(3).active {
    color: var(--main-color-blue);
}

.mytopnav-item:nth-child(4).active {
    color: var(--main-color-purple);
}

.mytopnav-item:nth-child(5).active {
    color: var(--main-color-red);
}


/* Change the color of links on hover */
.topnav .mytopnav-icon:hover,
.topnav .mytopnav-item:hover {
    box-shadow: inset 0 0 100px 100px var(--topnav-item-background-hover);
}

/* Add an active class to highlight the current page */
.topnav .mytopnav-item.active {
    background-color: var(--topnav-item-background-active);
}


/* When the screen is less than 800 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
@media screen and (max-width: 800px) {
    .mytopnav-item:not(:first-child) {
        display: none;
    }

    .topnav .mytopnav-icon {
        background: var(--topnav-background-color-2);
        display: inline-flex;
        max-width: 20px;
        color: var(--topnav-font-regular-color);
        font-size: 25px;
    }
}

/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
@media screen and (max-width: 800px) {
    .topnav.responsive {
        /*position: relative;*/
        flex-direction: column;
    }

        .topnav.responsive .mytopnav-icon {
            background: var(--topnav-background-color-2);
            position: absolute;
            right: 0;
            top: 0;
            padding: 22px 16px 21px 16px;
        }

        .topnav.responsive .mytopnav-item {
            float: none;
            display: block;
            text-align: left;
        }
}

@media screen and (max-width: 1024px) {
    .item-wrapper .item {
        width: calc(50% - 22.5px);
    }

    .item-inner-container-team-view {
        width: calc(50% - 5px);
    }

    .item-inner-container-team-view:nth-child(3n + 3) {
        margin-right: 10px;
    }

    .item-inner-container-team-view:nth-child(2n + 2) {
        margin-right: 0;
    }

    .item:nth-child(3n + 2) {
        margin-left: 15px;
        margin-right: 15px;
    }

    .item-experience:nth-child(2n + 1) {
        margin-right: 0;
    }

    /*SIDE-MENU*/
    .menu-container {
        width: 100px;
        min-width: 100px;
        padding-left: 0;
    }

    .singe-menu-name {
        display: none;
    }

    .details-wrapper-side-menu {
        display: none;
    }

    /*PROFILE-VIEW*/

    .top-details-container, .information-container, .item-container, .button-wrapper {
        min-width: 420px;
    }
}

@media screen and (max-width: 724px) {
    .item-wrapper .item, .item-inner-container-team-view {
        width: 100%;
    }

    .item-inner-container-team-view:nth-child(n) {
        margin-right: 0;
    }

    .item-experience:nth-child(2n+1) {
        margin-right: 15px;
    }

    /*PROFILE-VIEW*/

    .top-details-inner-container:nth-child(3), .top-details-inner-container:last-child {
        display: none;
    }

    .top-details-inner-container:nth-child(2) {
        width: 85%;
    }

    .input, .item-inner-container-profile {
        width: 100%;
    }

    .item-inner-container {
        margin-right: 0;
    }
}

/* BACKDROP */

.card {
    background: white;
    border-radius: 10px;
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
}

.modal {
    position: fixed;
    z-index: 100;
    width: 350px;
    top: 30vh;
    left: 10%;
    display: none;
}

.modal.visible {
    display: block;
    animation: fade-slide-in 0.3s ease-out forwards;
}

.modal .modal__title {
    margin: 0;
    padding: 1rem;
    border-bottom: 1px solid #00329e;
    background: #00329e;
    color: white;
    border-radius: 10px 10px 0 0;
}

.modal .modal__content {
    padding: 1rem;
}

.modal .modal__actions {
    padding: 0 1rem 1rem 1rem;
    display: flex;
    justify-content: flex-end;
}

.remove-on-detail {
    width: 8px;
    float: left;
    padding-top: 4px;
    padding-right: 5px;
}

#backdrop {
    position: fixed;
    width: 100%;
    height: 100vh;
    top: 0;
    left: 0;
    background: rgba(0, 0, 0, 0.75);
    z-index: 10;
    pointer-events: none;
    display: none;
}

#backdrop.visible {
    display: block;
    pointer-events: all;
}

#add-modal .modal__content {
    display: flex;
    flex-direction: column;
}

.flex-actions {
    display: flex;
    justify-content: space-evenly !important;
}

@media (min-width: 768px) {
    .modal {
        width: 23rem;
        left: calc(50% - 10rem);
    }
}

@keyframes fade-slide-in {
    from {
        transform: translateY(-5rem);
    }

    to {
        transform: translateY(0);
    }
}

